# matrix

./: .gitignore  Cargo.toml
benches/: cross_product_benchmarks.rs  determinant_benchmarks.rs  inverse.rs  my_benchmark.rs  scalar_mult.rs
matrix_display/: proj
src/: funcs.rs  lib.rs  macros.rs  main.rs  mat_struct.rs  math_traits.rs  vec_struct.rs
