[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
branches = "0.1.3"
cpuprofiler = "0.0.4"
num-traits = "0.2.18"
rand = "0.8.5"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "inverse"
harness = false
